--- a/Spring/KHSpring/WebContent/WEB-INF/web.xml
+++ b/Spring/KHSpring/WebContent/WEB-INF/web.xml
@@ -1,6 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app>
-
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee" 
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+		http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+	version="3.1">
+	<filter>
+		<filter-name>encodingFilter</filter-name>
+		<filter-class>
+			org.springframework.web.filter.CharacterEncodingFilter
+		</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>encodingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 	<!-- <servlet>과 <servlet-mapping>은 한 세트 -->
 	<servlet>
 		<servlet-name>hello</servlet-name>
